--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,7 +29,7 @@ dist.jar=${dist.dir}/Hazi1.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.darcula-1.0.0.jar=darcula-1.0.0.jar
+file.reference.darcula-1.0.0.jar=src/darcula-1.0.0.jar
 includes=**
 jar.compress=false
 javac.classpath=\
